--- a/ShareCare/app/src/main/AndroidManifest.xml
+++ b/ShareCare/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".DessertActivity"
+            android:label="Dessert"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".StartersActivity"
             android:label="Starters"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" />
-
-        <activity android:name=".MainCoursesActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MainCoursesActivity"
             android:label="Main Courses"
-            android:parentActivityName=".MainActivity"/>
-
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
