--- a/BroadcastFunApp/app/src/main/AndroidManifest.xml
+++ b/BroadcastFunApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.BroadcastFunApp"
         tools:targetApi="31">
         <activity
+            android:name=".CustomBroadcastActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WifiStateActivity"
+            android:exported="false" />
+        <activity
             android:name=".BatteryPercentageActivity"
             android:exported="false" />
         <activity
