--- a/BroadcastFunApp/app/src/main/AndroidManifest.xml
+++ b/BroadcastFunApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BroadcastFunApp"
         tools:targetApi="31">
+        <receiver
+            android:name=".BatteryPercentageActivity2"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+            </intent-filter>
+        </receiver>
+        <activity
+            android:name=".BatteryPercentageActivity2"
+            android:exported="false" />
         <activity
             android:name=".CustomBroadcastActivity"
             android:exported="false" />
