--- a/MyFormApp/app/src/main/AndroidManifest.xml
+++ b/MyFormApp/app/src/main/AndroidManifest.xml
@@ -10,11 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyAnimeWatchlist"
+        android:theme="@style/Theme.MyFormApp"
         tools:targetApi="31">
-        <activity
-            android:name=".AnimeDetailsActivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
